Update and rename form.php to form.html

--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
 <!-- body tag is used  -->
 <body>
     <!-- form action has been used to redirect the user to the checkout  -->
-    <form action="checkout.php" method="POST">
+    <form action="checkout.html" method="POST">
         <!-- center tag is used to align the text to center  -->
     <center>
         <h3>Order Confirmation Form</h3>
