Update and rename product.php to product.html

--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
             <p>Classic 3.5" floppy disk with 1.44 MB storage capacity.</p>
             <p>$10.00</p>
             <!-- form action tag has been used to link a form and redirect the user to form page when "buy now" is pressed  -->
-            <form action="form.php">
+            <form action="form.html">
                 <input type="submit" name="" id="" value="BUY NOW">
             </form>
         </div>
@@ -35,7 +35,7 @@
             <h3>Floppy Disk 2</h3>
             <p>High-density 5.25" floppy disk with 1.2 MB storage capacity.</p>
             <p>$128.35</p>
-            <form action="form.php">
+            <form action="form.html">
                 <input type="submit" name="" id="" value="BUY NOW">
             </form>
         </div>
@@ -46,7 +46,7 @@
             <h3>Floppy Disk 3</h3>
             <p>Apple Floppy Disk </p>
             <p>$17.00</p>
-            <form action="form.php">
+            <form action="form.html">
                 <input type="submit" name="" id="" value="BUY NOW">
             </form>
         </div>
@@ -57,7 +57,7 @@
             <h3>Floppy Disk 4</h3>
             <p>Vintage Floppy Disk </p>
             <p>$200.00</p>
-            <form action="form.php">
+            <form action="form.html">
                 <input type="submit" name="" id="" value="BUY NOW">
             </form>
         </div>
@@ -68,7 +68,7 @@
             <h3>Floppy Disk 4</h3>
             <p>Early Floppy Disk </p>
             <p>$100.00</p>
-            <form action="form.php">
+            <form action="form.html">
                 <input type="submit" name="" id="" value="BUY NOW">
             </form>
         </div>
