--- a/checkout.html
+++ b/checkout.html
@@ -21,8 +21,8 @@
         <nav>
             <!-- unordered list has been created -->
             <ul>
-                <li><a href="index.php">Home</a></li>
-                <li><a href="product.php">Products</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">Products</a></li>
             </ul>
         </nav>
     </header>
