--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- unordered list has been used to list down the pages of website  -->
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="product.php">Products</a></li>
+                <li><a href="product.html">Products</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
